--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,13 @@
   interpolation operator :we are extracting value of -->
 
 <!--  <p>Text of my first tag</p>  -->  
-<first-component></first-component>
+<!--<first-component></first-component>-->
 <!--<template-demo></template-demo> 
    data bindingggg -->
 <!--<login-demo></login-demo>
 <app-twowaybinding></app-twowaybinding>-->
 <!--<app-parent-component></app-parent-component>-->
-<app-warehouse></app-warehouse>
+<!-- <app-warehouse></app-warehouse>-->
+<!-- <app-switchdemo></app-switchdemo>
+<app-simple-form2></app-simple-form2> -->
+<app-reactive-form></app-reactive-form>
