--- a/src/app/warehouse/warehouse.component.html
+++ b/src/app/warehouse/warehouse.component.html
@@ -1,4 +1,5 @@
 <p>warehouse works!</p>
- <h1>hi this is my ware house stock detals</h1>
+ <h1>This is my ware house stock details</h1>
+
  <p>valuesEmittedFromChild: {{valueEmittedFromChildComponent}}</p>
- <app-store (orderPlaced)="parentEventHandlerFunction($event)"></app-store>
+ <!--<app-store (orderPlaced)="parentEventHandlerFunction($event)"></app-store>-->
