--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,5 +11,7 @@
 <!--<app-parent-component></app-parent-component>-->
 <!-- <app-warehouse></app-warehouse>-->
 <!-- <app-switchdemo></app-switchdemo>
-<app-simple-form2></app-simple-form2> -->
+<app-simple-form2></app-simple-form2> 
 <app-reactive-form></app-reactive-form>
+<app-myservice-comp></app-myservice-comp>-->
+<app-read-json></app-read-json>
