--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,4 +14,8 @@
 <app-simple-form2></app-simple-form2> 
 <app-reactive-form></app-reactive-form>
 <app-myservice-comp></app-myservice-comp>-->
-<app-read-json></app-read-json>
+<!-- <app-read-json></app-read-json> -->
+
+
+<!--<app-parent-interaction></app-parent-interaction>-->
+<app-home1></app-home1>
